@@ -1,3 +1,14 @@
+Fri Feb  8 21:03:40 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * dds/DCPS/Qos_Helper.inl:
+
+          Fix math error.
+
+        * tests/DCPS/UnitTests/TimeTSubtraction.cpp:
+        * tests/DCPS/UnitTests/UnitTests.mpc:
+
+          Add test to demonstrate fix is correct.
+
 Tue Feb  5 15:26:27 UTC 2013  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/Serializer.cpp:
